--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 authors = [{ name = "The NOMAD Authors" }]
 license = { text = "Apache-2.0" }
 dependencies = [
-    #"nomad-lab[infrastructure]@git+https://github.com/nomad-coe/nomad.git@develop",
+    "nomad-lab[infrastructure]@git+https://github.com/nomad-coe/nomad.git@develop",
 ]
 
 [project.urls]
@@ -26,8 +26,8 @@ dev = [
 ]
 
 tests = [
-    #"electronicparsers@git+https://github.com/nomad-coe/electronic-parsers.git@develop",
-    #"nomad_dos_fingerprints@git+https://gitlab.mpcdf.mpg.de/nomad-lab/nomad-dos-fingerprints"
+    "electronicparsers@git+https://github.com/nomad-coe/electronic-parsers.git@develop",
+    "nomad_dos_fingerprints@git+https://gitlab.mpcdf.mpg.de/nomad-lab/nomad-dos-fingerprints"
 ]
 
 [tool.ruff]
