--- a/dosnormalizer/nomad_plugin.yaml
+++ b/dosnormalizer/nomad_plugin.yaml
@@ -2,5 +2,5 @@ plugin_type: normalizer
 name: dosnormalizer
 description: |
  This is the normalizer for DOS in NOMAD.
-normalizer_class_name: dosnormalizer.normalizer.DosNormalizer
+normalizer_class_name: dosnormalizer.DosNormalizer
 plugin_source_code_url=None: https://github.com/nomad-coe/nomad-normalizer-plugin-dos.git
