--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ authors = [{ name = "The NOMAD Authors" }]
 license = { text = "Apache-2.0" }
 dependencies = [
     "nomad-lab[infrastructure]@git+https://github.com/nomad-coe/nomad.git@develop",
-    "nomad-schema-plugin-run@git+https://github.com/nomad-coe/nomad-schema-plugin-run.git@develop",
 ]
 
 [project.urls]
@@ -27,10 +26,9 @@ dev = [
 ]
 
 tests = [
-    "electronicparsers@git+https://github.com/nomad-coe/electronic-parsers.git@develop",
     "nomad-schema-plugin-run@git+https://github.com/nomad-coe/nomad-schema-plugin-run.git@develop",
     "nomad-schema-plugin-simulation-workflow@git+https://github.com/nomad-coe/nomad-schema-plugin-simulation-workflow.git@develop",
-    "nomad_dos_fingerprints@git+https://gitlab.mpcdf.mpg.de/nomad-lab/nomad-dos-fingerprints"
+    "nomad_dos_fingerprints@git+https://gitlab.mpcdf.mpg.de/nomad-lab/nomad-dos-fingerprints",
 ]
 
 [tool.ruff]
